fix(testutil): apply code-review fixes to Tolerance and ReferenceReader
Code-quality review of Task 6 flagged three issues in the foundational test utilities that every per-stub test in Phase 3 will use; fixing now before the pattern propagates.

Tolerance: replaced the step-function near-zero branch with the canonical additive hybrid form 'abs_tol + rel_tol * |cpp|' used by numpy.isclose, BOOST_CHECK_CLOSE, etc. Continuous across all reference magnitudes, same semantics as before at the extremes (pure absolute at zero, pure relative for large refs). Removed the now-unused TIGHT_NEAR_ZERO_THRESHOLD constant and introduced paired LOOSE_ABS alongside LOOSE_REL for symmetry. Added a continuity test that would have caught the original step-function regime transition.

ReferenceReader: throw IllegalStateException for infrastructure errors (file not found, malformed JSON, missing migration-harness/ dir) instead of AssertionError — lets CI distinguish infrastructure failures from test-logic failures. Only the test_group/case-name mismatches remain as AssertionError since those are schema violations visible to test authors. expectedDouble() now handles JSON string values (nlohmann/json emits NaN, Infinity, -Infinity as strings because JSON lacks native representations). caseNames() uses List.copyOf instead of ArrayList+unmodifiableList — same result, one allocation.

Full test suite: 551 tests (was 550), 0 failures, 25 skipped. Plan updated to reflect new content.

Signed-off-by: Jose Moya <jlmoya@gmail.com>